<resources>
    <string name="app_name">DoguenDoguen</string>

    <!-- 매인 탭 구성 -->
    <string name="find_pet">새가족 찾기</string>
    <string name="wish_pet">두근두근</string>
    <string name="message">메시지</string>
    <string name="my_profile">마이 페이지</string>


    <!-- 메인 검색 프래그먼트 -->
    <!-- 성별 선택 -->
    <string name="dog_gender">성별은요?</string>
    <string-array name="dog_genders">
        <item>수컷</item>
        <item>암컷</item>
        <item>상관없음</item>
    </string-array>

    <!-- 나이 선택 -->
    <string name="dog_age">몇살된 친구를 찾아볼까요?</string>
    <string-array name="dog_ages">
        <item>1~3개월</item>
        <item>4~6개월</item>
        <item>7~8개월</item>
    </string-array>

    <!-- 분양이 시급한 반려견들 -->
    <string name="dog_emergency_title">분양이 시급한 반려견들</string>
    <string name="dog_post_title">당신을 기다리는 모든 친구들</string>


    <!-- 내 위시 프래그먼트 -->
    <string name="wish_title">두근두근</string>
    <string name="wish_sub_title">언젠간 가족이 될지도 몰라요!</string>


    <!-- 메시지 프래그먼트 -->
    <string name="message_title">메시지</string>
    <string name="message_sub_title">모든 메시지를 확인했습니다.</string>


    <!-- 마이 프로필 프래그먼트 -->
    <string name="profile_title">로그인 하기</string>
    <string name="profile_sub_title">로그인 후 이용 가능한 서비스입니다.</string>
    <string name="post_register">분양글 등록하기</string>
    <string name="post_my_list">내가 쓴 글 목록</string>
    <string name="question">자주 묻는 질문</string>
    <string name="service_terms">서비스 이용약관</string>
    <string name="message_alarm">채팅 알람 설정</string>
    <string name="logout">로그아웃</string>

    <!-- 분양글 등록(PostRegist_25_Fragment) -->
    <string name="post_registration">분양글 등록하기</string>

    <!-- 신고하기 다이얼로그 -->
    <string name="dialog_report_reason">예)다른 커뮤니티에서 사기분양으로 유명한 사람이 도근도근에서도 똑같이
    사기분양을 위해 글을 등록하고 있어요. 확인 부탁드려요!</string>

    <!-- 나이 스피어 -->
    <string-array name="age_spinner">
        <item>1개월</item>
        <item>2개월</item>
        <item>3개월</item>
        <item>4개월</item>
        <item>5개월</item>
        <item>6개월</item>
        <item>7개월</item>
        <item>8개월</item>
        <item>9개월</item>
        <item>10개월</item>
        <item>11개월</item>
        <item>12개월</item>
        <item>13개월</item>
        <item>14개월</item>
        <item>15개월</item>
        <item>16개월</item>
        <item>17개월</item>
        <item>18개월</item>
    </string-array>

    <!-- 이용약관 -->
    <string name="first_agreement">제1장 총칙
        제1조(목적) 이 약관은 회사가 온라인으로 제공하는 디
        지털콘텐츠(이하 "콘텐츠"라고 한다) 및 제반서비스의
        이용과 관련하여 회사와 이용자와의 권리, 의무 및 책임
        사항 등을 규정함을 목적으로 합니다.
        제2조(정의) 이 약관에서 사용하는 용어의 정의는 다음
        과 같습니다.
        1. "회사"라 함은 "콘텐츠" 산업과 관련된 경제활동을
        영위하는 자로서 콘텐츠 및 제반서비스를 제공하는 자를
        말합니다.
        2. "이용자"라 함은 "회사"의 사이트에 접속하여 이 약관
        에 따라 "회사"가 제공하는 "콘텐츠" 및 제반서비스를 이
        용하는 회원 및 비회원을 말합니다.
        3. "회원"이라 함은 "회사"와 이용계약을 체결하고 "이
        용자" 아이디(ID)를 부여받은 "이용자"로서 "회사"의 정
        보를 지속적으로 제공받으며 "회사"가 제공하는 서비스
        를 지속적으로 이용할 수 있는 자를 말합니다.
        4. "비회원"이라 함은 "회원"이 아니면서 "회사"가 제공
        하는 서비스를 이용하는 자를 말합니다.
        5. "콘텐츠"라 함은 정보통신망이용촉진 및 정보보호 등
        에 관한 법률 제2조 제1항 제1호의 규정에 의한 정보통신</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_agreement">
                1. 개인정보의 처리 목적
        도근도근 (‘www.dogndogn.co.kr’이하 ‘도근도근’
        ) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으
        며, 다음의 목적 이외의 용도로는 이용하지 않습니다.
        - 고객 가입의사 확인, 고객에 대한 서비스 제공에 따른
        본인 식별.인증, 회원자격 유지.관리, 물품 또는 서비스
        공급에 따른 금액 결제, 물품 또는 서비스의 공급.배송 등

        2. 개인정보의 처리 및 보유 기간
        ① 도근도근 (‘www.dogndogn.co.kr’이하 ‘도근도
        근’) 은(는) 정보주체로부터 개인정보를 수집할 때 동의
        받은 개인정보 보유·이용기간 또는 법령에 따른 개인정
        보 보유·이용기간 내에서 개인정보를 처리·보유합니
        다.

        ② 구체적인 개인정보 처리 및 보유 기간은 다음과 같습
        니다. ☞ 아래 예시를 참고하여 개인정보 처리업무와 개
        인정보 처리업무에 대한 보유기간 및 관련 법령, 근거 등
        을 기재합니다.
        (예시)- 고객 가입 및 관리 : 서비스 이용계약 또는 회원가
        입 해지시까지, 다만 채권·채무관계 잔존시에는 해당
    </string>

    <!-- 자주묻는질문 -->
    <string name="first_question" >
        도근도근 서비스를 이용하여 분양을 원하는 경우 로그인으로 서비스를 접속 하신 후
마이페이지 탭에 분양등록하기 버튼이 활성화 되어 있습니다.
마이페이지 분양등록 항목을 선택하여 단계별로 정보를 기입하시고 분양글을 등록하시기
바랍니다.</string>
    <string name="second_question" >
    도근도근 서비스는 입양자와 분양자의 정보를 제공받아 소개하는 형태로 이루어져있습니다.
분양글을 입양자의 조건에 맞게 필터링 하여 검색 후 제공된 정보를 바탕으로 분양자와
대화하기를 통해 자유롭게 입양에 대한 정보를 얻고 거래 방법이나 장소를 선정하여
진행해 나가시면 되겠습니다.
    </string>
    <string name="third_question" >
현재 도근도근에서 입/분양 거래 시 보증해주는 부분은 없습니다.
입/분양자 간의 신뢰를 바탕으로 거래가 이루어지며 도근도근에서는 플랫폼형태로 정보만
제공합니다. 서로간의 신뢰감 있는 대화와 검색을 통해 새로운 가족을 만나시길 바랍니다.
    </string>
    <string name="fourth_question" >
    도근도근 서비스는 상업적 목적의 분양 형태를 지양하고 있습니다.
가정견 분양을 통해 강아지 공장과 같은 불건전한 공급시장을 줄여 나가고 유기견과 같은
사회적 문제를 사전에 방지하고자 하는 취지의 서비스 입니다.
가정견이라는 것을 증명하고, 입양자가 신뢰할 수 있도록 하여 우리 강아지들이 행복하고
건강한 가족들을 만날 수 있도록 부모견 사진을 등록해 주시기를 바랍니다.
    </string>
    <string name="fifth_question" >
    예방접종은 5차까지 과정이 있습니다.
    생후 6주부터 접종을 시작합니다.
    1차 접종에는 종합백신과 코로나 장염 주사를 맞고
    2차 접종에는 종합백신과 코로나 장염
    3차 접종에는 종합백신과 켄넬코프 1차
    4차 접종에는 종합백신과 켄넬코프 2차
    5차 접종에는 종합백신 과 광견병 주사를 맞습니다.
    5차까지 다 맞고 맞은 날을 기준으로 1년 뒤부터 보강 접종을 하게 됩니다.
    접종 부분에 관하여 분양자와 대화 시 충분히 대화하여 확인하시기 바랍니다.</string>
</resources>














