<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registDrawer"
    android:gravity="center"
    tools:openDrawer="end"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:orientation="vertical"
                tools:context="org.tacademy.woof.doguendoguen.app.base.profile.UserProfileFragment">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp">
                    <TextView
                        android:id="@+id/profile_title"
                        android:text="@string/profile_title"
                        android:textColor="#5B4319"
                        android:textSize="25sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/profile_sub_title"
                        android:text="@string/profile_sub_title"
                        android:textSize="15sp"
                        android:textColor="#3E3A39"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/profile_title"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_user_image"
                        android:layout_width="53dp"
                        android:layout_height="53dp"
                        android:src="@drawable/girls_eneration_taeyeon"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/post_regist"
                        android:text="@string/post_register"
                        android:textSize="15sp"
                        android:textColor="#C8C9CA"
                        android:layout_marginTop="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/user_post_list"
                        android:text="@string/post_my_list"
                        android:layout_marginTop="25dp"
                        android:textColor="#C8C9CA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/question"
                        android:textSize="15sp"
                        android:textColor="#3E3A39"
                        android:layout_marginTop="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/service_terms"
                        android:textSize="15sp"
                        android:textColor="#3E3A39"
                        android:layout_marginTop="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/divider"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/message_alarm"
                        android:textColor="#C8C9CA"
                        android:textSize="15sp"
                        android:layout_marginTop="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"/>
                    <com.rey.material.widget.Switch
                        style="@style/Material.Widget.Switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_alignParentRight="true"
                        android:gravity="center_horizontal"
                        android:checked="false"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/logout"
                        android:textColor="#C8C9CA"
                        android:textSize="15sp"
                        android:layout_marginTop="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/divider"/>
            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/post_regist_container"
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</android.support.v4.widget.DrawerLayout>
